# dr-web-task

./: .dockerignore  .gitignore  Makefile  README.md  formatters-cfg.toml  pyproject.toml
src/: container.py  main.py
src/commands/: begin.py  commit.py  counts.py  end.py  find.py  get.py  rollback.py  set.py  unset.py
src/utils/: commands.py  db.py  repl.py  types.py
src/utils/tests/: test_db.py
