[tool.poetry]
name = "dr-web-task"
version = "1.0.0"
description = "Dr Web Task"
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dependency-injector = "^4.48.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
flake8 = "7.3.0"
black = ">=23.1,<26.0"
pydocstyle = "^6.3.0"
isort = ">=5.13.2,<7.0.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
flake8-string-format = "^0.3.0"
pep8-naming = ">=0.14.1,<0.16.0"
flake8-bandit = "^4.1.1"
flake8-comprehensions = "^3.15.0"
flake8-pyproject = "^1.2.3"
typing-extensions = "^4.12.2"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
freezegun = "^1.5.1"
pytest-cov = "^6.0.0"
pytest-benchmark = "^5.1.0"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
force_single_line = true
line_length = 120
use_parentheses = true
py_version=313
